--- a/cas-server-documentation/sidebar.html
+++ b/cas-server-documentation/sidebar.html
@@ -76,6 +76,7 @@
             <li>Persistence
                 <ul>
                     <li><a href="/$version/installation/JSON-Service-Management.html">JSON</a></li>
+                    <li><a href="/$version/installation/YAML-Service-Management.html">YAML</a></li>
                     <li><a href="/$version/installation/Mongo-Service-Management.html">Mongo</a></li>
                     <li><a href="/$version/installation/LDAP-Service-Management.html">LDAP</a></li>
                     <li><a href="/$version/installation/JPA-Service-Management.html">JPA</a></li>
